force-app/main/default/objects/EinsteinVision__c/EinsteinVision__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>defines credentials and endpoints for the predictive vision service</description>
    <label>EinsteinVision</label>
</CustomObject>