force-app/main/default/objects/EinsteinVision__c/fields/CertFile__c.field-meta.xml
<CustomField>
    <fullName>CertFile__c</fullName>
    <defaultValue>"einstein_platform"</defaultValue>
    <description>the Salesforce file name where your certificate is stored.</description>
    <inlineHelpText>the Salesforce file name where your certificate is stored.  Use this if you signed up and downloaded a .pem file (typical names are "predictive_services" and "einstein_platform"</inlineHelpText>
    <label>CertFile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>