force-app/main/default/objects/EinsteinVision__c/fields/certificateIssuer__c.field-meta.xml
<CustomField>
    <fullName>certificateIssuer__c</fullName>
    <description>issuer domain for the certificate you created.  Default instructions have this going to developer.force.com</description>
    <label>certificateIssuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>