force-app/main/default/objects/EinsteinVision__c/fields/CertName__c.field-meta.xml
<CustomField>
    <fullName>CertName__c</fullName>
    <description>the Salesforce name of your security certificate.  (PKS method)</description>
    <inlineHelpText>the Salesforce name of your security certificate.  Use this if you signed up for Einstein very early and have an Einstein-related security certificate in Setup>Security>Certificate and Key Management</inlineHelpText>
    <label>CertName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>