force-app/main/default/objects/EinsteinVision__c/fields/EinsteinUsername__c.field-meta.xml
<CustomField>
    <fullName>EinsteinUsername__c</fullName>
    <description>Email that you used to sign up for the Eintstein predictive vision service.  If you signed in with your Salesforce org, it's the email address (not necessarily the username) on your user.</description>
    <inlineHelpText>Email that you used to sign up for the Eintstein predictive vision service.  If you signed in with your Salesforce org, it's the email address (not necessarily the username) on your user.</inlineHelpText>
    <label>EinsteinUsername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>