force-app/main/default/objects/EinsteinVision__c/fields/LocalEinsteinUser__c.field-meta.xml
<CustomField>
    <fullName>LocalEinsteinUser__c</fullName>
    <description>the salesforce userid (not username) of the user that you want to respond as Einstein</description>
    <inlineHelpText>the salesforce userid (not username) of the user that you want to respond as Einstein</inlineHelpText>
    <label>LocalEinsteinUser</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>