force-app/main/default/objects/EinsteinVision__c/fields/TokenExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>TokenExpirationTime__c</fullName>
    <defaultValue>3600</defaultValue>
    <inlineHelpText>how long should the token (JWT) be valid for?</inlineHelpText>
    <label>TokenExpirationTime</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>